syntax = "proto3";
package web.referee.service.v1;
option go_package = "github.com/tengenatari/web-referee/internal/pb/web_referee_api;web_referee_api";

import "google/api/annotations.proto";

service WebRefereeService {
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse) {
    option (google.api.http) = {
      get: "/api/v1/health-check"
    };
  }
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse){
    option (google.api.http) = {
      post: "/api/v1/user"
    };
  }
  rpc CreateTournament(CreateTournamentRequest) returns (CreateTournamentResponse) {
    option (google.api.http) = {
      post: "/api/v1/tournament"
    };
  }
  rpc CreatePlayer(CreatePlayerRequest) returns (CreatePlayerResponse) {
    option (google.api.http) = {
      post: "/api/v1/player"
    };
  }
}

message HealthCheckResponse {}

message HealthCheckRequest {}

message CreateUserRequest {
  string name = 1;
  string tigr_id = 2;
  int64  rating = 3;
}

message CreateUserResponse {

}

message CreateTournamentResponse {

}

message CreateTournamentRequest {
  string name = 1;
  string date = 2;
}

message CreatePlayerRequest {
  string TournamentId = 1;
  string UserId = 2;
  int64 MacMahon = 3;
}

message CreatePlayerResponse {
}